Сверстан первый экран

--- a/index.html
+++ b/index.html
@@ -3,15 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Тестовое задание "Сотка"</title>
   </head>
-  <body class="page">
+  <body>
     <header class="header">
+      <div class="header__container">
+        <h1 class="header__title">OUR SERVICES</h1>
+        <img class="header__logo" src="./header_logo.svg" alt="Логотип" />
+      </div>
     </header>
-    <main class="main">
+    <main>
+      <section class="services">
+        <div class="card">
+          <div class="card__container">
+            <img class="card__img" src="./img1.svg" alt="Фото#1 на фон" />
+            <div class="card__description">
+              <h2 class="card__description_title">Destination Wedding</h2>
+              <p class="card__description_text">
+                We arrange destination wedding<br />
+                any place of country.
+              </p>
+              <a class="card__description_link" href="#"
+                ><img
+                  class="card__link_line"
+                  src="./line.svg"
+                  alt="Декоративный элемент"
+                />Learn more</a
+              >
+            </div>
+          </div>
+          <div class="card__container">
+            <img class="card__img" src="./img2.svg" alt="Фото#1 на фон" />
+            <div class="card__description">
+              <h2 class="card__description_title">Decoration Service</h2>
+              <p class="card__description_text">
+                We arrange destination wedding<br />
+                any place of country.
+              </p>
+              <a class="card__description_link" href="#"
+                ><img
+                  class="card__link_line"
+                  src="./line.svg"
+                  alt="Декоративный элемент"
+                />Learn more</a
+              >
+            </div>
+          </div>
+          <div class="card__container">
+            <img class="card__img" src="./img3.svg" alt="Фото#1 на фон" />
+            <div class="card__description">
+              <h2 class="card__description_title">Catering service</h2>
+              <p class="card__description_text">
+                We arrange destination wedding<br />
+                any place of country.
+              </p>
+              <a class="card__description_link" href="#"
+                ><img
+                  class="card__link_line"
+                  src="./line.svg"
+                  alt="Декоративный элемент"
+                />Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+        <button class="card__button">SEE MORE SERVICE</button>
+      </section>
     </main>
-    <footer class="footer">
-    </footer>
   </body>
 </html>
